@@ -1,5 +1,5 @@
 name: Serialization
 type: module
 description: Provides a service for (de)serializing data to/from formats such as JSON and XML
-package: Core
+package: Web services
 core: 8.x
